<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
                android:padding="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No.1"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="2016-01-22 12:00"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_order_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="朱世元（13290703932）"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tv_order_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="高新区翠竹街1号"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <com.wohuijituan.whcsmerchant.myview.MyListViewInListView
        android:id="@+id/lv_order_goods_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tv_order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="22.0元"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"/>
        <Button
            android:id="@+id/btn_order_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_state_receive"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_order_prepare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_state_prepare"
            android:layout_margin="5dp"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
